explicitly request/enable annotation processing with newer JDKs
copy compilerArgs from project.build.plugins.plugin[] to the
profile instead of using @combine.children="append", though,
as otherwise user POMs will inherit that very attribute, too…